--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "firebase": "^10.5.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
