--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-twitter-embed": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
