--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "node": "18.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
